build/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arbimon
  namespace: staging
spec:
  selector:
    matchLabels:
      app: arbimon
  template:
    metadata:
      labels:
        app: arbimon
    spec:
      containers:
        - name: arbimon
          image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/arbimon:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: '50Mi'
              cpu: '100m'
            limits:
              memory: '200Mi'
              cpu: '400m'
