build/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/limit-rpm: "120"
  name: arbimon-ingress
  namespace: staging
  labels:
    app: arbimon
spec:
  rules:
    - host: staging-arbimon.rfcx.org
      http:
        paths:
          - backend:
              serviceName: arbimon-service
              servicePort: 80
